css: fix blurry rotated tiles

--- a/pymdownx_mahjong/css/mahjong.css
+++ b/pymdownx_mahjong/css/mahjong.css
@@ -141,6 +141,8 @@
 /* Rotated tile (called from another player) */
 .mahjong-tile-rotated {
     transform: rotate(90deg);
+    will-change: transform;
+    backface-visibility: hidden;
     margin-left: calc(var(--mahjong-tile-gap) * 6);
     margin-right: calc(var(--mahjong-tile-gap) * 6);
     position: relative;
